Moved build folder to backend/public

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 node_modules
 .env
-**/dist
-backend/public/index.html
-backend/public/main.js
-backend/public/main.js.LICENSE.txt
+**dist/
 .DS_Store
