--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "mongoose": "^6.2.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5"
   }
 }
